--- a/parse_speeches.ipynb
+++ b/parse_speeches.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-25T02:53:56.799693Z",
-     "start_time": "2025-11-25T02:53:56.793159Z"
+     "end_time": "2025-11-26T05:48:09.459982Z",
+     "start_time": "2025-11-26T05:48:09.159298Z"
     }
    },
    "cell_type": "code",
@@ -22,27 +22,27 @@
        "<module 'data_processing_utils' from 'C:\\\\Users\\\\MainUser\\\\project\\\\cs224w_cb_graph\\\\data_processing_utils.py'>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 57
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-25T03:09:50.734278Z",
-     "start_time": "2025-11-25T03:09:46.721510Z"
+     "end_time": "2025-11-26T06:19:18.311728Z",
+     "start_time": "2025-11-26T06:18:46.486673Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "author_name = \"m:miran-stephen-i\" #\"j:jefferson-philip-n\" #\"p:powell-jerome-h\"\n",
+    "#author_name = \"m:miran-stephen-i\" #\"j:jefferson-philip-n\" #\"p:powell-jerome-h\"\n",
     "# \"w:williams-john-c\"\n",
     "# \"w:williams-john-c\"\n",
     "# \"b:bowman-michelle-w\"\n",
-    "\n",
+    "author_name = \"c:clarida-richard-h\" #\"e:evans-charles-l\" #\"m:mester-loretta-j\" #\"d:daly-mary-c\"#h:harker-patrick-t\"#b:brainard-lael\"#g:goolsbee-austan-d\"#s:schmid-jeffrey-r\" #\"c:collins-susan-m\"#p:paulson-anna-l\" #\"b:bostic-raphael-w\"#k:kashkari-neel-t\" #\"m:miran-stephen-i\"\n",
     "data = data_processing_utils.query_fed_prints_by_author(author_name)\n",
     "pdf_links = data_processing_utils.retrieve_remaining_ids(author_name, data)\n",
     "author_short_name = data_processing_utils.get_author_short_name(author_name)\n",
@@ -54,19 +54,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/miran20250922a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full Text'}\n",
-      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/miran20251107a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full Text'}\n",
-      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/miran20251119a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full Text'}\n",
-      "3\n",
-      "3\n"
+      "46\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190328a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190517a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190222a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190110a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/clarida20210108a.htm', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20201014a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190411a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20200521a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190503a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20200831a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190605a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/clarida20210414a.htm', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20211108a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20201116a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20200616a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'http://papers.nber.org/papers/w6254.pdf', 'fileformat': 'application/pdf'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190926a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20191018a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20200225a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20191112a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20181025a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20211130a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20211012a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20200221a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/clarida20210325a.htm', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20211119a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190228a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/clarida20210224a.htm', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190409.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/clarida20210517a.htm', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20191001a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20191101a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20191114a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/clarida20210512a.htm', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/econres/ifdp/files/ifdp1244.pdf', 'fileformat': 'application/pdf'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190701a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190520a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20181127a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190513a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "file {'fileurl': 'https://www.federalreserve.gov/newsevents/speech/files/clarida20190530a.pdf', 'fileformat': 'application/pdf', 'filefunction': 'Full text'}\n",
+      "40\n",
+      "34\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing PDFs: 100%|██████████| 3/3 [00:02<00:00,  1.15it/s]"
+      "Processing PDFs: 100%|██████████| 34/34 [00:29<00:00,  1.17it/s]"
      ]
     },
     {
@@ -74,7 +111,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Saved 3 entries → text_data/miran.json\n"
+      "Saved 34 entries → text_data/clarida.json\n"
      ]
     },
     {
@@ -85,7 +122,7 @@
      ]
     }
    ],
-   "execution_count": 71
+   "execution_count": 27
   }
  ],
  "metadata": {
