--- a/query_speeches.ipynb
+++ b/query_speeches.ipynb
@@ -9,6 +9,8 @@
    },
    "cell_type": "code",
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "API_KEY = \"f76029a3a9cd0c9eeb480679c9a77fe8\"\n",
     "author_name = \"b:bowman-michelle-w\"\n"
    ],
@@ -346,15 +348,169 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-08T01:18:39.450052Z",
-     "start_time": "2025-11-08T01:18:39.447076Z"
+     "end_time": "2025-11-28T08:10:23.358765Z",
+     "start_time": "2025-11-28T08:10:23.344779Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "path = r\"C:\\Users\\MainUser\\project\\cs224w_cb_graph\\price_data\\members.xlsx\"\n",
+    "data = pd.read_excel(path)\n",
+    "print(data)\n",
+    "unique_vals = data.values.ravel().tolist()\n",
+    "unique_vals = list(set(unique_vals))\n",
+    "unique_vals = [x for x in unique_vals if pd.notna(x)]\n",
+    "unique_vals = sorted(unique_vals)\n",
+    "for val in unique_vals:\n",
+    "    print(val)\n",
+    "#print(len(unique_vals))\n",
+    "print(len(unique_vals))"
+   ],
    "id": "e5c870b8efccd9f5",
-   "outputs": [],
-   "execution_count": 9
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               2018/1             2018/3             2018/5  \\\n",
+      "0     Janet L. Yellen   Jerome H. Powell   Jerome H. Powell   \n",
+      "1   William C. Dudley  William C. Dudley  William C. Dudley   \n",
+      "2    Thomas I. Barkin   Thomas I. Barkin   Thomas I. Barkin   \n",
+      "3   Raphael W. Bostic  Raphael W. Bostic  Raphael W. Bostic   \n",
+      "4       Lael Brainard      Lael Brainard      Lael Brainard   \n",
+      "5   Loretta J. Mester  Loretta J. Mester  Loretta J. Mester   \n",
+      "6    Jerome H. Powell  Randal K. Quarles  Randal K. Quarles   \n",
+      "7   Randal K. Quarles   John C. Williams   John C. Williams   \n",
+      "8    John C. Williams                NaN                NaN   \n",
+      "9                 NaN                NaN                NaN   \n",
+      "10                NaN                NaN                NaN   \n",
+      "11                NaN                NaN                NaN   \n",
+      "\n",
+      "               2018/6             2018/8              2018/9  \\\n",
+      "0    Jerome H. Powell   Jerome H. Powell    Jerome H. Powell   \n",
+      "1   William C. Dudley   John C. Williams    John C. Williams   \n",
+      "2    Thomas I. Barkin   Thomas I. Barkin    Thomas I. Barkin   \n",
+      "3   Raphael W. Bostic  Raphael W. Bostic   Raphael W. Bostic   \n",
+      "4       Lael Brainard      Lael Brainard       Lael Brainard   \n",
+      "5   Loretta J. Mester   Esther L. George  Richard H. Clarida   \n",
+      "6   Randal K. Quarles  Loretta J. Mester    Esther L. George   \n",
+      "7    John C. Williams  Randal K. Quarles   Loretta J. Mester   \n",
+      "8                 NaN                NaN   Randal K. Quarles   \n",
+      "9                 NaN                NaN                 NaN   \n",
+      "10                NaN                NaN                 NaN   \n",
+      "11                NaN                NaN                 NaN   \n",
+      "\n",
+      "               2018/11             2018/12              2019/1  \\\n",
+      "0     Jerome H. Powell    Jerome H. Powell    Jerome H. Powell   \n",
+      "1     John C. Williams    John C. Williams    John C. Williams   \n",
+      "2     Thomas I. Barkin    Thomas I. Barkin  Michelle W. Bowman   \n",
+      "3    Raphael W. Bostic   Raphael W. Bostic       Lael Brainard   \n",
+      "4        Lael Brainard  Michelle W. Bowman       James Bullard   \n",
+      "5   Richard H. Clarida       Lael Brainard  Richard H. Clarida   \n",
+      "6         Mary C. Daly  Richard H. Clarida     Charles L. Evan   \n",
+      "7    Loretta J. Mester        Mary C. Daly    Esther L. George   \n",
+      "8    Randal K. Quarles   Loretta J. Mester   Randal K. Quarles   \n",
+      "9                  NaN   Randal K. Quarles   Eric S. Rosengren   \n",
+      "10                 NaN                 NaN                 NaN   \n",
+      "11                 NaN                 NaN                 NaN   \n",
+      "\n",
+      "                2019/3  ...                 2024/9                2024/11  \\\n",
+      "0     Jerome H. Powell  ...       Jerome H. Powell       Jerome H. Powell   \n",
+      "1     John C. Williams  ...       John C. Williams       John C. Williams   \n",
+      "2   Michelle W. Bowman  ...       Thomas I. Barkin       Thomas I. Barkin   \n",
+      "3        Lael Brainard  ...        Michael S. Barr        Michael S. Barr   \n",
+      "4        James Bullard  ...      Raphael W. Bostic      Raphael W. Bostic   \n",
+      "5   Richard H. Clarida  ...           Lisa D. Cook     Michelle W. Bowman   \n",
+      "6     Charles L. Evans  ...           Mary C. Daly           Lisa D. Cook   \n",
+      "7     Esther L. George  ...        Beth M. Hammack           Mary C. Daly   \n",
+      "8    Randal K. Quarles  ...    Philip N. Jefferson        Beth M. Hammack   \n",
+      "9    Eric S. Rosengren  ...      Adriana D. Kugler    Philip N. Jefferson   \n",
+      "10                 NaN  ...  Christopher J. Waller      Adriana D. Kugler   \n",
+      "11                 NaN  ...     Michelle W. Bowman  Christopher J. Waller   \n",
+      "\n",
+      "                  2024/12                 2025/1                 2025/3  \\\n",
+      "0        Jerome H. Powell       Jerome H. Powell       Jerome H. Powell   \n",
+      "1        John C. Williams       John C. Williams       John C. Williams   \n",
+      "2        Thomas I. Barkin        Michael S. Barr        Michael S. Barr   \n",
+      "3         Michael S. Barr     Michelle W. Bowman     Michelle W. Bowman   \n",
+      "4       Raphael W. Bostic       Susan M. Collins       Susan M. Collins   \n",
+      "5      Michelle W. Bowman           Lisa D. Cook           Lisa D. Cook   \n",
+      "6            Lisa D. Cook     Austan D. Goolsbee     Austan D. Goolsbee   \n",
+      "7            Mary C. Daly    Philip N. Jefferson    Philip N. Jefferson   \n",
+      "8         Beth M. Hammack      Adriana D. Kugler      Adriana D. Kugler   \n",
+      "9     Philip N. Jefferson     Alberto G. Musalem     Alberto G. Musalem   \n",
+      "10      Adriana D. Kugler      Jeffrey R. Schmid      Jeffrey R. Schmid   \n",
+      "11  Christopher J. Waller  Christopher J. Waller  Christopher J. Waller   \n",
+      "\n",
+      "                   2025/5                 2025/6                 2025/7  \\\n",
+      "0        Jerome H. Powell       Jerome H. Powell       Jerome H. Powell   \n",
+      "1        John C. Williams       John C. Williams       John C. Williams   \n",
+      "2         Michael S. Barr        Michael S. Barr        Michael S. Barr   \n",
+      "3      Michelle W. Bowman     Michelle W. Bowman       Susan M. Collins   \n",
+      "4        Susan M. Collins       Susan M. Collins           Lisa D. Cook   \n",
+      "5            Lisa D. Cook           Lisa D. Cook     Austan D. Goolsbee   \n",
+      "6      Austan D. Goolsbee     Austan D. Goolsbee    Philip N. Jefferson   \n",
+      "7     Philip N. Jefferson    Philip N. Jefferson     Alberto G. Musalem   \n",
+      "8           Neel Kashkari      Adriana D. Kugler      Jeffrey R. Schmid   \n",
+      "9       Adriana D. Kugler     Alberto G. Musalem     Michelle W. Bowman   \n",
+      "10     Alberto G. Musalem      Jeffrey R. Schmid  Christopher J. Waller   \n",
+      "11  Christopher J. Waller  Christopher J. Waller                    NaN   \n",
+      "\n",
+      "                   2025/9                2025/10  \n",
+      "0        Jerome H. Powell       Jerome H. Powell  \n",
+      "1        John C. Williams       John C. Williams  \n",
+      "2         Michael S. Barr        Michael S. Barr  \n",
+      "3        Susan M. Collins     Michelle W. Bowman  \n",
+      "4            Lisa D. Cook       Susan M. Collins  \n",
+      "5      Austan D. Goolsbee           Lisa D. Cook  \n",
+      "6     Philip N. Jefferson     Austan D. Goolsbee  \n",
+      "7      Alberto G. Musalem    Philip N. Jefferson  \n",
+      "8       Jeffrey R. Schmid     Alberto G. Musalem  \n",
+      "9   Christopher J. Waller  Christopher J. Waller  \n",
+      "10       Stephen I. Miran       Stephen I. Miran  \n",
+      "11                    NaN      Jeffrey R. Schmid  \n",
+      "\n",
+      "[12 rows x 65 columns]\n",
+      "Adriana D. Kugler\n",
+      "Alberto G. Musalem\n",
+      "Austan D. Goolsbee\n",
+      "Beth M. Hammack\n",
+      "Charles L. Evan\n",
+      "Charles L. Evans\n",
+      "Christopher J. Waller\n",
+      "Eric S. Rosengren\n",
+      "Esther L. George\n",
+      "James Bullard\n",
+      "Janet L. Yellen\n",
+      "Jeffrey R. Schmid\n",
+      "Jerome H. Powel\n",
+      "Jerome H. Powell\n",
+      "John C. Williams\n",
+      "Lael Brainard\n",
+      "Lisa D. Cook\n",
+      "Loretta J. Mester\n",
+      "Lorie K. Logan\n",
+      "Mary C. Daly\n",
+      "Michael S. Barr\n",
+      "Michelle W. Bowman\n",
+      "Neel Kashkari\n",
+      "Patrick Harker\n",
+      "Philip N. Jefferson\n",
+      "Randal K. Quarles\n",
+      "Raphael W. Bostic\n",
+      "Richard H. Clarida\n",
+      "Robert S. Kaplan\n",
+      "Stephen I. Miran\n",
+      "Susan M. Collins\n",
+      "Thomas I. Barkin\n",
+      "William C. Dudley\n",
+      "33\n"
+     ]
+    }
+   ],
+   "execution_count": 10
   }
  ],
  "metadata": {
