--- a/query_speeches.ipynb
+++ b/query_speeches.ipynb
@@ -122,6 +122,8 @@
     "        continue\n",
     "    if \"fedfmo\" in record[\"id\"]:\n",
     "        continue\n",
+    "    if \"fedgrb\" in record[\"id\"]:\n",
+    "        continue\n",
     "    record_id = record[\"id\"]\n",
     "    print(record[\"id\"])\n",
     "    print(record[\"file\"])\n",
