--- a/text_data/test_html.ipynb
+++ b/text_data/test_html.ipynb
@@ -1153,6 +1153,183 @@
     }
    ],
    "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-30T03:28:34.881522Z",
+     "start_time": "2025-11-30T03:28:32.844622Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from dateutil import parser\n",
+    "\n",
+    "def extract_stlouisfed_html(url):\n",
+    "    resp = requests.get(url)\n",
+    "    resp.raise_for_status()\n",
+    "    soup = BeautifulSoup(resp.text, \"html.parser\")\n",
+    "\n",
+    "    # ---------- TITLE ----------\n",
+    "    title = \"\"\n",
+    "    h1 = soup.select_one(\"div.component.content h1\")\n",
+    "    if h1:\n",
+    "        title = h1.get_text(\" \", strip=True)\n",
+    "\n",
+    "    # ---------- DATE ----------\n",
+    "    raw_date = \"\"\n",
+    "    iso_date = \"\"\n",
+    "\n",
+    "    # Typically the first <p> after title block is the date\n",
+    "    date_tag = soup.select_one(\"div.component.content p\")\n",
+    "    if date_tag:\n",
+    "        raw_date = date_tag.get_text(\" \", strip=True)\n",
+    "        try:\n",
+    "            iso_date = parser.parse(raw_date).date().isoformat()\n",
+    "        except:\n",
+    "            iso_date = \"\"\n",
+    "\n",
+    "    # ---------- MAIN TEXT ----------\n",
+    "    paragraphs = []\n",
+    "\n",
+    "    body = soup.select_one(\"div.field-content div.wrapper\")\n",
+    "    if body:\n",
+    "        for tag in body.find_all([\"p\", \"h2\", \"h3\"]):\n",
+    "            t = tag.get_text(\" \", strip=True)\n",
+    "            if t:\n",
+    "                paragraphs.append(t)\n",
+    "\n",
+    "    full_text = \"\\n\\n\".join(paragraphs)\n",
+    "\n",
+    "    return {\n",
+    "        \"title\": title,\n",
+    "        \"date\": iso_date,\n",
+    "        \"raw_date\": raw_date,\n",
+    "        \"text\": full_text,\n",
+    "        \"length\": len(full_text),\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "# Test\n",
+    "url = \"https://www.stlouisfed.org/on-the-economy/2020/march/bullard-expected-us-macroeconomic-performance-pandemic-adjustment-period\"\n",
+    "data = extract_stlouisfed_html(url)\n",
+    "\n",
+    "print(\"TITLE:\", data[\"title\"])\n",
+    "print(\"DATE:\", data[\"date\"])\n",
+    "print(\"LENGTH:\", data[\"length\"])\n",
+    "print(data[\"text\"][:600])\n"
+   ],
+   "id": "d13be3978ac1a3f4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TITLE: Expected U.S. Macroeconomic Performance during the Pandemic Adjustment Period\n",
+      "DATE: \n",
+      "LENGTH: 11988\n",
+      "Introduction Any views expressed are my own and do not necessarily reflect the views of the Federal Open Market Committee.\n",
+      "\n",
+      "The coronavirus has the potential to create catastrophic health outcomes in the U.S. I take as a baseline for my analysis Ferguson et al. “Impact of Non-Pharmaceutical Interventions (NPIs) to Reduce COVID-19 Mortality and Healthcare Demand.” Imperial College, COVID-19 Report 9, March 16, 2020. In order to mitigate this, public health officials have recommended a variety of social-distancing policies to slow the spread of the virus. In addition, social interaction has decl\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-30T03:40:15.022206Z",
+     "start_time": "2025-11-30T03:40:14.369713Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from dateutil import parser\n",
+    "\n",
+    "def extract_bostonfed_html(url):\n",
+    "    resp = requests.get(url)\n",
+    "    resp.raise_for_status()\n",
+    "    soup = BeautifulSoup(resp.text, \"html.parser\")\n",
+    "\n",
+    "    # ---------- TITLE ----------\n",
+    "    title = \"\"\n",
+    "    t = soup.select_one(\"div.title-container h1\")\n",
+    "    if t:\n",
+    "        title = t.get_text(\" \", strip=True)\n",
+    "\n",
+    "    # ---------- AUTHOR ----------\n",
+    "    author = \"\"\n",
+    "    a = soup.select_one(\"div.author-container\")\n",
+    "    if a:\n",
+    "        author = a.get_text(\" \", strip=True).replace(\"By \", \"\").strip()\n",
+    "\n",
+    "    # ---------- DATE ----------\n",
+    "    raw_date = \"\"\n",
+    "    iso_date = \"\"\n",
+    "\n",
+    "    d = soup.select_one(\"div.date-container\")\n",
+    "    if d:\n",
+    "        raw_date = d.get_text(\" \", strip=True)\n",
+    "        try:\n",
+    "            iso_date = parser.parse(raw_date).date().isoformat()\n",
+    "        except:\n",
+    "            iso_date = \"\"\n",
+    "\n",
+    "    # ---------- SPEECH TEXT ----------\n",
+    "    paragraphs = []\n",
+    "\n",
+    "    for p in soup.select(\"div.bodytextlist p\"):\n",
+    "        txt = p.get_text(\" \", strip=True)\n",
+    "        if txt:\n",
+    "            paragraphs.append(txt)\n",
+    "\n",
+    "    full_text = \"\\n\\n\".join(paragraphs)\n",
+    "\n",
+    "    return {\n",
+    "        \"title\": title,\n",
+    "        \"author\": author,\n",
+    "        \"date\": iso_date,\n",
+    "        \"text\": full_text,\n",
+    "        \"length\": len(full_text)\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "# Test\n",
+    "url = \"https://www.bostonfed.org/news-and-events/speeches/opening-remarks-prevention-containment-and-policy-change-ndash-lessons-from-history.aspx\"\n",
+    "data = extract_bostonfed_html(url)\n",
+    "\n",
+    "print(\"TITLE:\", data[\"title\"])\n",
+    "print(\"AUTHOR:\", data[\"author\"])\n",
+    "print(\"DATE:\", data[\"date\"])\n",
+    "print(\"LENGTH:\", data[\"length\"])\n",
+    "print()\n",
+    "print(data[\"text\"][:600])\n"
+   ],
+   "id": "75f61d5ad3114e5b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TITLE: Opening Remarks: Prevention, Containment, and Policy Change – Lessons from History\n",
+      "AUTHOR: \n",
+      "DATE: \n",
+      "LENGTH: 12454\n",
+      "\n",
+      "The Federal Reserve Bank of Boston's 54th Economic Conference: \" After the Fall - Re-evaluating Supervisory, Regulatory, and Monetary Policy \" Chatham, MA\n",
+      "\n",
+      "Good afternoon. I'd like to welcome everyone to this conference, which is the Federal Reserve Bank of Boston's 54th economic conference. I'd like to thank my colleagues from the Bank for their work in putting together such a dynamic and timely program.\n",
+      "\n",
+      "The decision to move our conference to the fall came temporarily into question when it started snowing this weekend. But the weather on Sunday didn't seem to bother our football team, the Pa\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
