--- a/parse_speeches.ipynb
+++ b/parse_speeches.ipynb
@@ -3,15 +3,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-30T02:43:59.004440Z",
-     "start_time": "2025-11-30T02:43:58.705941Z"
+     "end_time": "2025-11-30T03:55:59.637064Z",
+     "start_time": "2025-11-30T03:55:59.630377Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import data_processing_utils\n",
     "import importlib\n",
-    "importlib.reload(data_processing_utils)"
+    "importlib.reload(data_processing_utils)\n"
    ],
    "id": "795fe16879fb70f2",
    "outputs": [
@@ -21,18 +21,18 @@
        "<module 'data_processing_utils' from 'C:\\\\Users\\\\MainUser\\\\project\\\\cs224w_cb_graph\\\\data_processing_utils.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-30T02:44:01.300845Z",
-     "start_time": "2025-11-30T02:44:01.290989Z"
+     "end_time": "2025-11-30T03:56:02.478965Z",
+     "start_time": "2025-11-30T03:56:02.475926Z"
     }
    },
    "cell_type": "code",
@@ -44,15 +44,13 @@
    ],
    "id": "29055132d624e369",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 23
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2025-11-30T02:44:06.852847Z"
+     "end_time": "2025-11-30T03:58:25.613858Z",
+     "start_time": "2025-11-30T03:56:06.022778Z"
     }
    },
    "cell_type": "code",
@@ -60,6 +58,7 @@
     "total_remaining = 0\n",
     "\n",
     "for row in author_map:\n",
+    "\n",
     "    author_name = row[\"author_key\"]\n",
     "    print(author_name)\n",
     "\n",
@@ -90,11 +89,163 @@
       "Total Records 63\n",
       "Total Remaining Files 0\n",
       "{}\n",
-      "p:powell-jerome-h\n"
+      "p:powell-jerome-h\n",
+      "Total Records 120\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "k:kugler-adriana\n",
+      "Total Records 25\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "m:musalem-alberto-g\n",
+      "Total Records 24\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "e:evans-charles-l\n",
+      "Total Records 79\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "w:waller-christopher-j\n",
+      "Total Records 121\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "r:rosengren-eric-s\n",
+      "Total Records 267\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "g:george-esther-l\n",
+      "Total Records 8\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "b:bullard-james-b\n",
+      "Total Records 541\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "y:yellen-janet-l\n",
+      "Total Records 180\n",
+      "fedfsp:11524 {'fileurl': 'https://www.frbsf.org/news-and-media/speeches/yellen-speeches/2008/03/yellen-globalization-domestic-inflation/', 'fileformat': 'text/html'}\n",
+      "fedfsp:11381 {'fileurl': 'https://www.frbsf.org/news-and-media/speeches/yellen-speeches/2009/06/yellen-financial-markets-monetary-policy-closing-panel/', 'fileformat': 'text/html'}\n",
+      "Total Remaining Files 2\n",
+      "{}\n",
+      "s:schmid-jeffrey\n",
+      "Total Records 1\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "w:williams-john-c\n",
+      "Total Records 360\n",
+      "fedfsp:11430 {'fileurl': 'https://www.frbsf.org/news-and-media/speeches/williams-speeches/2017/05/global-challenge-of-very-low-r-star-presentation-figures/', 'fileformat': 'text/html', 'filefunction': 'Full Text'}\n",
+      "fednsp:96995 {'fileurl': 'https://tellerwindow.newyorkfed.org/2023/09/29/peeling-the-inflation-onion-revisited/', 'fileformat': 'text/html', 'filefunction': 'Full text'}\n",
+      "fedfsp:11453 {'fileurl': 'https://www.frbsf.org/news-and-media/speeches/williams-speeches/2017/10/whats-the-future-of-interest-rates-the-answers-in-the-stars/', 'fileformat': 'text/html', 'filefunction': 'Full Text'}\n",
+      "Total Remaining Files 3\n",
+      "{}\n",
+      "b:brainard-lael\n",
+      "Total Records 102\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "m:mester-loretta-j\n",
+      "Total Records 243\n",
+      "fedcsp:22060 {'fileurl': 'https://clevelandfed.org/en/newsroom-and-events/speeches/sp-20160713-us-economic-outlook-and-monetary-policy.aspx', 'fileformat': 'text/html', 'filefunction': 'Full text'}\n",
+      "Total Remaining Files 1\n",
+      "{}\n",
+      "d:daly-mary-c\n",
+      "Total Records 172\n",
+      "fedfsp:94964 {'fileurl': 'https://youtu.be/vD2spqZ5-yw', 'filefunction': 'Watch the video'}\n",
+      "fedfsp:102110 {'fileurl': 'https://www.frbsf.org/news-and-media/speeches/mary-c-daly/2025/11/modern-central-banking-monetary-policy-implementation-and-communication/', 'fileformat': 'text/html', 'filefunction': 'FRBSF - view'}\n",
+      "fedfsp:102110 {'fileurl': 'https://www.frbsf.org/news-and-media/events/2025/11/mary-c-daly-institute-of-international-and-european-affairs-2025/', 'fileformat': 'text/html', 'filefunction': 'Watch the video'}\n",
+      "fedfsp:11408 {'fileurl': 'https://www.frbsf.org/news-and-media/speeches/mary-c-daly/2019/11/net-net-opportunity/', 'fileformat': 'text/html', 'filefunction': 'Full Text'}\n",
+      "fedfsp:11433 {'fileurl': 'https://www.frbsf.org/news-and-media/speeches/mary-c-daly/2019/02/achieving-full-employment-in-the-modern-economy/', 'fileformat': 'text/html', 'filefunction': 'Full Text'}\n",
+      "fedfsp:11404 {'fileurl': 'https://www.frbsf.org/news-and-media/speeches/mary-c-daly/2018/10/sustaining-growth-the-balancing-act/', 'fileformat': 'text/html', 'filefunction': 'Full Text'}\n",
+      "Total Remaining Files 6\n",
+      "{}\n",
+      "b:barr-michael-s\n",
+      "Total Records 56\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "b:bowman-michelle-w\n",
+      "Total Records 131\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "k:kashkari-neel\n",
+      "Total Records 12\n",
+      "fedmsp:20596 {'fileurl': 'https://minneapolisfed.org/~/media/files/news_events/pres/2017-04-11-mn-business-partnership-neel-kashkari.pdf?la=en', 'fileformat': 'text/html', 'filefunction': 'Full text - slides'}\n",
+      "fedmsp:20596 {'fileurl': 'https://minneapolisfed.org/news-and-events/presidents-speeches/neel-kashkari-at-the-minnesota-business-partnership', 'fileformat': 'text/html', 'filefunction': 'Full text - web'}\n",
+      "fedmsp:20708 {'fileurl': 'https://minneapolisfed.org/~/media/files/news_events/pres/2017-03-06-kashkari-nabe-tbtf-minneapolis-plan.pdf?la=en', 'fileformat': 'application/pdf', 'filefunction': 'Full text - PDF'}\n",
+      "fedmsp:20708 {'fileurl': 'https://minneapolisfed.org/news-and-events/presidents-speeches/ending-too-big-to-fail-the-minneapolis-plan-at-the-nabe-economic-policy-conference', 'fileformat': 'text/html', 'filefunction': 'Full text - web'}\n",
+      "fedmsp:20599 {'fileurl': 'https://minneapolisfed.org/news-and-events/presidents-speeches/transforming-education', 'fileformat': 'text/html', 'filefunction': 'Full text - web'}\n",
+      "Total Remaining Files 5\n",
+      "{}\n",
+      "h:harker-patrick-t\n",
+      "Total Records 137\n",
+      "fedpsp:97729 {'fileurl': 'https://philadelphiafed-prod-cm.ase3.p.azure.frb.pvt/-/media/frbp/assets/institutional/speeches/harker/2024/240206-rowan-speech.pdf', 'fileformat': 'application/pdf'}\n",
+      "Total Remaining Files 1\n",
+      "{'pdf': {'fedpsp:97729': 'https://philadelphiafed-prod-cm.ase3.p.azure.frb.pvt/-/media/frbp/assets/institutional/speeches/harker/2024/240206-rowan-speech.pdf'}}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing PDFs: 100%|██████████| 1/1 [00:00<00:00, 60.65it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ERROR] Failed downloading https://philadelphiafed-prod-cm.ase3.p.azure.frb.pvt/-/media/frbp/assets/institutional/speeches/harker/2024/240206-rowan-speech.pdf: HTTPSConnectionPool(host='philadelphiafed-prod-cm.ase3.p.azure.frb.pvt', port=443): Max retries exceeded with url: /-/media/frbp/assets/institutional/speeches/harker/2024/240206-rowan-speech.pdf (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x000002802873B690>: Failed to resolve 'philadelphiafed-prod-cm.ase3.p.azure.frb.pvt' ([Errno 11001] getaddrinfo failed)\"))\n",
+      "\n",
+      "Appended 0 new entries → text_data/harker.json\n",
+      "Total entries now: 134\n",
+      "j:jefferson-philip-n\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Records 33\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "q:quarles-randal-k\n",
+      "Total Records 53\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "b:bostic-raphael-w\n",
+      "Total Records 22\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "c:clarida-richard-h\n",
+      "Total Records 46\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "k:kaplan-robert-s\n",
+      "Total Records 56\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "m:miran-stephen-i\n",
+      "Total Records 3\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "c:collins-susan-m\n",
+      "Total Records 41\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "d:dudley-william\n",
+      "Total Records 173\n",
+      "Total Remaining Files 0\n",
+      "{}\n",
+      "18\n"
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 24
   },
   {
    "metadata": {
