--- a/parse_speeches.ipynb
+++ b/parse_speeches.ipynb
@@ -299,6 +299,66 @@
     }
    ],
    "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-03T04:04:24.326257Z",
+     "start_time": "2025-12-03T04:04:24.307373Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def force_single_line(t: str):\n",
+    "    if not isinstance(t, str):\n",
+    "        return t\n",
+    "\n",
+    "    # Remove real newline characters\n",
+    "    t = t.replace(\"\\n\", \" \").replace(\"\\r\", \" \")\n",
+    "\n",
+    "    # Remove escaped sequences like \\n\n",
+    "    t = t.replace(\"\\\\n\", \" \")\n",
+    "\n",
+    "    # Remove NBSP\n",
+    "    t = t.replace(\"NBSP\", \" \").replace(\"\\xa0\", \" \")\n",
+    "\n",
+    "    # Collapse multiple spaces\n",
+    "    t = \" \".join(t.split())\n",
+    "\n",
+    "    return t\n",
+    "\n",
+    "author_short_name = data_processing_utils.get_author_short_name(\"l:logan-lorie\")\n",
+    "filename = f\"text_data/{author_short_name}.json\"\n",
+    "\n",
+    "# Load JSON\n",
+    "with open(filename, \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Modify rows\n",
+    "for row in data:\n",
+    "    # Fix date if needed\n",
+    "    # row[\"date\"] = fix_date(row[\"date\"])\n",
+    "\n",
+    "    # Flatten text into ONE long line\n",
+    "    row[\"text\"] = force_single_line(row[\"text\"])\n",
+    "\n",
+    "# Save back\n",
+    "with open(filename, \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(data, f, indent=2, ensure_ascii=False)\n",
+    "\n",
+    "print(\"Cleaned & flattened JSON saved.\")"
+   ],
+   "id": "4d9fc9e2edad6f67",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned & flattened JSON saved.\n"
+     ]
+    }
+   ],
+   "execution_count": 18
   }
  ],
  "metadata": {
