--- a/parse_speeches.ipynb
+++ b/parse_speeches.ipynb
@@ -359,6 +359,36 @@
     }
    ],
    "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-03T04:32:51.103240Z",
+     "start_time": "2025-12-03T04:32:51.096892Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "author_short_name = data_processing_utils.get_author_short_name(\"l:logan-lorie\")\n",
+    "filename = f\"text_data/{author_short_name}.json\"\n",
+    "\n",
+    "# Load JSON\n",
+    "with open(filename, \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "    print(len(data))"
+   ],
+   "id": "e5661655e03e01ee",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n"
+     ]
+    }
+   ],
+   "execution_count": 19
   }
  ],
  "metadata": {
