--- a/parse_speeches.ipynb
+++ b/parse_speeches.ipynb
@@ -363,14 +363,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T06:44:43.586238Z",
-     "start_time": "2025-12-03T06:44:43.577651Z"
+     "end_time": "2025-12-05T01:16:29.403653Z",
+     "start_time": "2025-12-05T01:16:29.387896Z"
     }
    },
    "cell_type": "code",
    "source": [
     "\n",
-    "author_short_name = data_processing_utils.get_author_short_name(\"e:evans-charles-l\")\n",
+    "author_short_name = data_processing_utils.get_author_short_name(\"d:daly-mary-c\")\n",
     "filename = f\"text_data/{author_short_name}.json\"\n",
     "\n",
     "# Load JSON\n",
@@ -384,11 +384,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51\n"
+      "41\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 24
   }
  ],
  "metadata": {
