added data-processing (predict the next speech's stances based on the last k speeches; avoid "cheating" via temporal masking).

--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -362,6 +362,53 @@
       "id": "6CU1fflH6jIw",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def subgraph_up_to_time (data, idx):\n",
+        "  graph_so_far = copy.copy(data)\n",
+        "\n",
+        "  graph_so_far['speech'].x = data['speech'].x[:idx]\n",
+        "\n",
+        "  for rel in graph_so_far.edge_types:\n",
+        "    src, et, dst = rel\n",
+        "    edge_idx = graph_so_far[et].edge_index\n",
+        "\n",
+        "    temporal_mask = torch.zeros(idx.size(1), dtype=torch.bool)\n",
+        "    if src == 'speech':\n",
+        "      temporal_mask &= (edge_idx[0] < idx)\n",
+        "    if dst == 'speech':\n",
+        "      temporal_mask &= (edge_idx[1] < idx)\n",
+        "\n",
+        "    graph_so_far[edge_idx] = edge_idx[:, temporal_mask]\n",
+        "\n",
+        "    if 'edge_attr' in graph_so_far[rel]:\n",
+        "      graph_so_far[rel].edge_attr = graph_so_far[rel].edge_attr[temporal_mask]\n",
+        "\n",
+        "  return graph_so_far\n",
+        "\n",
+        "def sliding_window (speech_idx, length)\n",
+        "  seqs = []\n",
+        "  pred_targets = []\n",
+        "\n",
+        "  for i in range(length, len(speech_idx)):\n",
+        "    seq = speech_idx[i-length : i]\n",
+        "    pred_target = speech_idx[i]\n",
+        "    seqs.append(seq)\n",
+        "    pred_targets.append(pred_target)\n",
+        "\n",
+        "  seqs_out = torch.stack(seqs)\n",
+        "  pred_targets_out = torch.stack(pred_targets)\n",
+        "\n",
+        "  return seqs_out, pred_targets_out"
+      ],
+      "metadata": {
+        "id": "0by7AYynJF6S"
+      },
+      "id": "0by7AYynJF6S",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
