--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -389,7 +389,7 @@
         "\n",
         "  return graph_so_far\n",
         "\n",
-        "def sliding_window (speech_idx, length)\n",
+        "def sliding_window (speech_idx, length):\n",
         "  seqs = []\n",
         "  pred_targets = []\n",
         "\n",
