--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -288,6 +288,9 @@
     {
       "cell_type": "code",
       "source": [
+        "from torch.nn import Linear, ModuleDict, ModuleList, Sequential, ReLU, LSTM\n",
+        "from torch_geometric.nn import GATv2Conv\n",
+        "\n",
         "class hetero_attn(torch.nn.Module):\n",
         "  #uses GATv2Conv for each of the layers before prediction heads\n",
         "  def __init__ (self, graph_data, hidden, heads, layers):\n",
