--- a/topic_labelling_batch.ipynb
+++ b/topic_labelling_batch.ipynb
@@ -233,8 +233,7 @@
     "\n",
     "for author_key in authors:\n",
     "\n",
-    "    if author_key in [\"barr\", \"logan\", \"powell\", \"waller\", \"williams\", \"schmid\", \"bullard\", \"evans\", \"george\", \"kugler\",\n",
-    "        \"musalem\", \"rosengren\", \"yellen\"]:\n",
+    "    if author_key in [\"schmid\"]:\n",
     "        continue\n",
     "\n",
     "    ids = read_all_ids(author_key)\n",
